--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ Experience Swiggy's superfast delivery for food delivered fresh & on time
             <li><a data-email = "rr824566@gmail.com" href="rr824566@gmail.com">Ritik shroff</a></li>
             <li><a data-email = "rr824566@gmail.com" href="rr824566@gmail.com">aayush shroff</a></li>
             <li><a data-email = "rr824566@gmail.com" href="rr824566@gmail.com">kajal shroff</a></li>
+            <li><a data-email = "rr824566@gmail.com" href="rr824566@gmail.com">kajal shroff</a></li>
         </ul>
     </div>
 </section>
